TestCases/Errors/Haversine/observations/sst/sum_02_obs.spm
obs r7-c16 0.00309643914045622
obs r7-c17 0.0038599982310524
obs r8-c17 0.00307692307692308
obs r6-c18 0.00142857142857143
obs r8-c18 0.00139062341782833
obs r9-c18 0.00109735693249309
obs r11-c18 0.0103846153846154
obs r6-c19 0.00258394383394383
obs r9-c19 1e-08
obs r10-c19 0.00567544136191677
obs r11-c19 0.0135999417249417
obs r10-c20 0.00846153846153846
obs r11-c20 0.0121153846153846
error_value r7-c16 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r6-c18 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r11-c18 0.2
error_value r6-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
